Add new controller and business logic.
